# OpenTalons

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.github/workflows/: autofix-pr-conflicts.yml  ci.yml
docs/: README.md  vercel.md
extensions/: README.md
extensions/discord/: README.md  manifest.json  package.json
extensions/discord/src/: index.ts
extensions/github/: README.md  manifest.json  package.json
extensions/imessage/: README.md  manifest.json  package.json
extensions/matrix/: README.md  manifest.json  package.json
extensions/matrix/src/: index.ts
extensions/nextcloud-talk/: README.md  manifest.json  package.json
extensions/nostr/: README.md  manifest.json  package.json
extensions/signal/: README.md  manifest.json  package.json
extensions/slack/: README.md  manifest.json  package.json
extensions/teams/: README.md  manifest.json  package.json
extensions/telegram/: README.md  manifest.json  package.json
extensions/webchat/: README.md  manifest.json  package.json
extensions/whatsapp/: README.md  manifest.json  package.json
scripts/: autofix_pr_conflicts.sh  mirror_openclaw.sh  resolve_conflicts_now.sh  sync_with_main.sh
src/opentalons/: __init__.py  cli.py  config.py  models.py  orchestrator.py  store.py  tools.py
tests/: test_orchestrator.py
ui/: next.config.mjs  package.json  tsconfig.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/lib/: integrations.ts  root.ts  skills.ts
(+426 files in other folders)
